# kitkat-lang-haskell

./: .gitignore  AST diagram.xopp
haskell/: CHANGELOG.md  kitkat-haskell.cabal
haskell/app/: Main.hs  Parser.hs  Types.hs
haskell_megaparsec/: kitkat-haskell.cabal
haskell_megaparsec/app/: Main.hs
haskell_megaparsec/src/: Parser.hs  Types.hs
haskell_megaparsec/src/Lexer/: Lexer.hs
haskell_spike/: .gitignore  CHANGELOG.md  LICENSE  haskell-spike.cabal  src.kitkat  stack.yaml
haskell_spike/app/: Main.hs
haskell_spike/src/: LLVM.hs  Linker.hs  ParserUtils.hs
haskell_spike/src/LLVM/: Pretty.hs
haskell_spike/src/LLVM/Pretty/: Typed.hs
haskell_spike/src/Lexer/: Inner.hs  Lexer.hs  TokenTypes.hs
haskell_spike/src/Midend/: Codegen.hs  CodegenInner.hs  Helpers.hs
haskell_spike/src/Parser/: Parser.hs  ParserInner.hs  ParserTypes.hs  SemantParser.hs  SemantParserInner.hs  SemantParserTypes.hs
haskell_spike/tests/: TestCodegen.hs  TestLexer.hs  TestParser.hs  TestSemantParser.hs  TestUtils.hs
