cabal-version:      3.0

-- The name of the package.
name:               haskell-spike

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- The license under which the package is released.
license:            BSD-2-Clause
license-file:       LICENSE
author:             Shen-Kit Hia
maintainer:         shenkit108+1@gmail.com
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:
      Lexer.Lexer
      Parser.Parser
      Parser.SemantParser
      Midend.Codegen
    hs-source-dirs:  src
    default-extensions: OverloadedStrings
    build-depends:   base ^>=4.17.2.1
                   , text
                   , megaparsec
                   , parser-combinators
                   , mtl
                   , llvm-hs-pure
                   , bytestring
    default-language: Haskell2010


executable haskell-spike
    -- Import common warning flags.
    import:             warnings
    main-is:            Main.hs
    hs-source-dirs:     app
    default-extensions: OverloadedStrings
    build-depends:      base ^>=4.17.2.1
                      , megaparsec
                      , llvm-hs-pure
                      , text
                      , llvm-hs-pretty
    default-language: Haskell2010
