cabal-version:      3.0

-- The name of the package.
name:               haskell-spike

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- The license under which the package is released.
license:            BSD-2-Clause
license-file:       LICENSE
author:             Shen-Kit Hia
maintainer:         shenkit108+1@gmail.com
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library main-lib
    exposed-modules:
      Lexer.Lexer
      Lexer.Inner
      Lexer.TokenTypes
      Parser.Parser
      Parser.ParserInner
      Parser.ParserTypes
      Parser.SemantParser
      Parser.SemantParserTypes
      Midend.Codegen
      Midend.Helpers
      Linker
      LLVM.Pretty
      LLVM.Pretty.Typed
    hs-source-dirs:  src
    default-extensions: OverloadedStrings
    build-depends:
      base                ^>=4.17.2.1,
      array                >= 0.5   && < 0.6,
      bytestring,
      llvm-hs-pure         >= 9.0   && < 10.0,
      text,
      prettyprinter        >= 1.2   && < 1.8,
      megaparsec,
      parser-combinators,
      mtl,
      process,
      directory,
      unix,
      containers
    default-language: Haskell2010


executable haskell-spike
    -- Import common warning flags.
    import:             warnings
    main-is:            Main.hs
    hs-source-dirs:     app
    default-extensions: OverloadedStrings
    build-depends:      base ^>=4.17.2.1
                      , megaparsec
                      , llvm-hs-pure
                      , text
                      , haskell-spike:main-lib
    default-language: Haskell2010

test-suite test-lexer
  type: exitcode-stdio-1.0
  main-is: TestLexer.hs
  hs-source-dirs: tests
  other-modules: TestUtils
  build-depends: base ^>=4.17.2.1,
                 HUnit,
                 haskell-spike:main-lib,
                 megaparsec,
                 text
  default-language: Haskell2010

test-suite test-parser
  type: exitcode-stdio-1.0
  main-is: TestParser.hs
  hs-source-dirs: tests
  other-modules: TestUtils
  build-depends: base ^>=4.17.2.1,
                 HUnit,
                 haskell-spike:main-lib,
                 megaparsec
  default-language: Haskell2010
